--- a/pages/tutor-dashboard.html
+++ b/pages/tutor-dashboard.html
@@ -7,13 +7,23 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
-
+    <link rel="icon" href="/assets/images/Favicon.png" type="image/x-icon">
+    <style>
+    body {
+        background-image: url('https://www.transparenttextures.com/patterns/cubes.png'), url('https://img.freepik.com/premium-vector/hand-drawn-set-elements-abstract-arrows-ribbons-hearts-stars-crowns-monsters-other-elements-hand-drawn-style-concept-design-scribble-illustration-vector-illustration_607987-917.jpg');
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        background-blend-mode: overlay;
+        background-size: auto, cover;
+        background-repeat: repeat, no-repeat;
+        background-color: #f5f7fa;
+      }</style>
   </head>
   <body>
-
-    <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom sticky-top">
       <div class="container">
-        <a class="navbar-brand fw-bold" href="index.html">CampusLearn<span class="text-primary">™</span></a>
+        <a class="navbar-brand fw-bold" href="../index.html">CampusLearn<span class="text-primary">™</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#clNav" aria-controls="clNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -34,59 +44,124 @@
     </nav>
 
     <main class="container my-4">
+      <h1 class="h4 mb-4">Tutor Console</h1>
 
-<h1 class="h4 mb-4">Tutor Console</h1>
-<div class="row g-4">
-  <div class="col-md-6">
-    <div class="card h-100">
-      <div class="card-body">
-        <h5 class="card-title">Assigned Modules</h5>
-        <ul class="list-group small">
-          <li class="list-group-item d-flex justify-content-between align-items-center">BIT: Software Engineering <span class="badge text-bg-primary">6 topics</span></li>
-          <li class="list-group-item d-flex justify-content-between align-items-center">BCom: Business Analytics <span class="badge text-bg-primary">3 topics</span></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div class="col-md-6">
-    <div class="card h-100">
-      <div class="card-body">
-        <h5 class="card-title">New Questions</h5>
-        <div class="list-group">
-          <a class="list-group-item list-group-item-action" href="topic-detail.html">DB101: Indexing strategies — <span class="text-muted">new</span></a>
-          <a class="list-group-item list-group-item-action" href="topic-detail.html">SE202: Sequence diagrams — <span class="text-muted">2h</span></a>
+      <section id="clTutorProfileSummary" class="mb-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Tutor Profile</h5>
+            <p><strong>Name:</strong> Tutor A</p>
+            <p><strong>Expertise:</strong> Software Engineering, Databases</p>
+            <p><strong>Stats:</strong> 10 Topics Assigned | 25 Students Helped | 4.8/5 Rating</p>
+            <a href="profile.html" class="btn btn-outline-primary btn-sm">Edit Profile</a>
+          </div>
+        </div>
+      </section>
+
+      <div class="row g-4">
+        <div class="col-md-6">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title">Assigned Modules</h5>
+              <ul class="list-group small">
+                <li class="list-group-item d-flex justify-content-between align-items-center">BIT: Software Engineering <span class="badge text-bg-primary">6 topics</span></li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">BCom: Business Analytics <span class="badge text-bg-primary">3 topics</span></li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">ITM300: Project Management <span class="badge text-bg-primary">2 topics</span></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title">New Questions</h5>
+              <div class="list-group">
+                <a class="list-group-item list-group-item-action" href="topic-detail.html">DB101: Indexing strategies — <span class="text-muted">new</span></a>
+                <a class="list-group-item list-group-item-action" href="topic-detail.html">SE202: Sequence diagrams — <span class="text-muted">2h</span></a>
+                <a class="list-group-item list-group-item-action" href="topic-detail.html">ITM300: Risk assessment — <span class="text-muted">4h</span></a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
-</div>
-<section class="mt-5">
-  <h2 class="h5">Upload Learning Materials</h2>
-  <form class="row g-3">
-    <div class="col-md-6">
-      <label class="form-label">Title</label>
-      <input type="text" class="form-control" required>
-    </div>
-    <div class="col-md-6">
-      <label class="form-label">Module</label>
-      <select class="form-select" required>
-        <option>SE202</option><option>DB101</option><option>ITM300</option>
-      </select>
-    </div>
-    <div class="col-12">
-      <label class="form-label">Resource Link (YouTube, PDF URL, etc.)</label>
-      <input type="url" class="form-control" placeholder="https://...">
-    </div>
-    <div class="col-12">
-      <label class="form-label">Description</label>
-      <textarea class="form-control" rows="3"></textarea>
-    </div>
-    <div class="col-12">
-      <button class="btn btn-primary" type="submit">Upload</button>
-    </div>
-  </form>
-</section>
 
+      <section class="mt-5" id="clUpcomingSessions">
+        <h2 class="h5 mb-3">Upcoming Tutoring Sessions</h2>
+        <div class="list-group">
+          <div class="list-group-item">
+            <h6 class="mb-1">SE202: UML Diagram Review</h6>
+            <p class="mb-1 small">Student: Jane Doe | Date: Oct 12, 2025, 10:00 AM | Platform: Zoom</p>
+            <a href="session-detail.html?id=1" class="btn btn-outline-primary btn-sm">Prepare for Session</a>
+          </div>
+          <div class="list-group-item">
+            <h6 class="mb-1">DB101: SQL Query Optimization</h6>
+            <p class="mb-1 small">Student: John Smith | Date: Oct 13, 2025, 3:00 PM | Platform: Microsoft Teams</p>
+            <a href="session-detail.html?id=2" class="btn btn-outline-primary btn-sm">Prepare for Session</a>
+          </div>
+        </div>
+      </section>
+
+      <section class="mt-5" id="clUploadMaterials">
+        <h2 class="h5 mb-3">Upload Learning Materials</h2>
+        <form class="row g-3">
+          <div class="col-md-6">
+            <label class="form-label">Title</label>
+            <input type="text" class="form-control" required>
+          </div>
+          <div class="col-md-6">
+            <label class="form-label">Module</label>
+            <select class="form-select" required>
+              <option>SE202</option>
+              <option>DB101</option>
+              <option>ITM300</option>
+            </select>
+          </div>
+          <div class="col-12">
+            <label class="form-label">Resource Link (YouTube, PDF URL, etc.)</label>
+            <input type="url" class="form-control" placeholder="https://...">
+          </div>
+          <div class="col-12">
+            <label class="form-label">Description</label>
+            <textarea class="form-control" rows="3"></textarea>
+          </div>
+          <div class="col-12">
+            <button class="btn btn-primary" type="submit">Upload</button>
+          </div>
+        </form>
+      </section>
+
+      <section class="mt-5" id="clPerformanceMetrics">
+        <h2 class="h5 mb-3">Performance Metrics</h2>
+        <div class="card">
+          <div class="card-body">
+            <p><strong>Average Response Time:</strong> 1.5 hours</p>
+            <p><strong>Student Rating:</strong> 4.8/5 (20 reviews)</p>
+            <p><strong>Resources Uploaded:</strong> 8</p>
+            <a href="metrics.html" class="btn btn-outline-secondary btn-sm">View Detailed Report</a>
+          </div>
+        </div>
+      </section>
+
+      <section class="mt-5" id="clPendingActions">
+        <h2 class="h5 mb-3">Pending Actions</h2>
+        <div class="list-group">
+          <a class="list-group-item list-group-item-action" href="topic-detail.html?id=3">Review new question in DB101 — <span class="text-muted">1h ago</span></a>
+          <a class="list-group-item list-group-item-action" href="resource.html?id=4">Approve resource upload — <span class="text-muted">3h ago</span></a>
+        </div>
+      </section>
+
+      <section class="mt-5" id="clRecentActivity">
+        <h2 class="h5 mb-3">Recent Activity</h2>
+        <div class="card">
+          <div class="card-body">
+            <ul class="list-unstyled small">
+              <li><i class="fa-solid fa-comment me-2"></i>Replied to SE202 question • Today 10:40</li>
+              <li><i class="fa-solid fa-file-alt me-2"></i>Uploaded UML guide • Yesterday</li>
+              <li><i class="fa-solid fa-check me-2"></i>Marked answer as accepted in DB101 • 2 days ago</li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="mt-5 py-4 border-top">
@@ -98,6 +173,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/app.js"></script>
-
   </body>
 </html>
