--- a/pages/settings.html
+++ b/pages/settings.html
@@ -7,13 +7,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
-
+    <link rel="icon" href="/assets/images/Favicon.png" type="image/x-icon">
+    <style>
+    body {
+        background-image: url('https://www.transparenttextures.com/patterns/cubes.png'), url('https://img.freepik.com/premium-vector/hand-drawn-set-elements-abstract-arrows-ribbons-hearts-stars-crowns-monsters-other-elements-hand-drawn-style-concept-design-scribble-illustration-vector-illustration_607987-917.jpg');
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        background-blend-mode: overlay;
+        background-size: auto, cover;
+        background-repeat: repeat, no-repeat;
+        background-color: #f5f7fa;
+      }
+      </style>
   </head>
   <body>
-
-    <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom sticky-top">
       <div class="container">
-        <a class="navbar-brand fw-bold" href="index.html">CampusLearn<span class="text-primary">™</span></a>
+        <a class="navbar-brand fw-bold" href="../index.html">CampusLearn<span class="text-primary">™</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#clNav" aria-controls="clNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -34,34 +45,151 @@
     </nav>
 
     <main class="container my-4">
+      <h1 class="h4 mb-4">Profile & Account Settings</h1>
 
-<h1 class="h4 mb-4">Profile & Account Settings</h1>
-<form class="row g-3">
-  <div class="col-md-6">
-    <label class="form-label">First name</label>
-    <input class="form-control" value="Fourie">
-  </div>
-  <div class="col-md-6">
-    <label class="form-label">Last name</label>
-    <input class="form-control" value="van der Walt">
-  </div>
-  <div class="col-md-6">
-    <label class="form-label">Email</label>
-    <input class="form-control" value="name@belgiumcampus.ac.za" disabled>
-  </div>
-  <div class="col-md-6">
-    <label class="form-label">Programme</label>
-    <select class="form-select"><option>BIT</option><option>BCom</option><option>Diploma</option></select>
-  </div>
-  <div class="col-12">
-    <label class="form-label">Topics I need help with</label>
-    <input class="form-control" placeholder="Add topics…">
-  </div>
-  <div class="col-12">
-    <button class="btn btn-primary">Save Changes</button>
-  </div>
-</form>
+      <section id="clProfilePicture" class="mb-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Profile Picture</h5>
+            <div class="d-flex align-items-center gap-3">
+              <img src="https://images.unsplash.com/photo-1522075469751-6603f39547f5" alt="Profile Picture" class="rounded-circle" style="width: 100px; height: 100px; object-fit: cover;">
+              <div>
+                <input type="file" class="form-control mb-2" accept="image/*">
+                <button class="btn btn-outline-primary btn-sm">Upload New Picture</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
+      <section id="clPersonalInfo" class="mb-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Personal Information</h5>
+            <form class="row g-3">
+              <div class="col-md-6">
+                <label class="form-label">First Name</label>
+                <input class="form-control" value="Fourie">
+              </div>
+              <div class="col-md-6">
+                <label class="form-label">Last Name</label>
+                <input class="form-control" value="van der Walt">
+              </div>
+              <div class="col-md-6">
+                <label class="form-label">Email</label>
+                <input class="form-control" value="name@belgiumcampus.ac.za" disabled>
+              </div>
+              <div class="col-md-6">
+                <label class="form-label">Programme</label>
+                <select class="form-select">
+                  <option selected>BIT</option>
+                  <option>BCom</option>
+                  <option>Diploma</option>
+                </select>
+              </div>
+              <div class="col-12">
+                <label class="form-label">Topics I Need Help With</label>
+                <input class="form-control" placeholder="Add topics (e.g., SE202, DB101)">
+              </div>
+              <div class="col-12">
+                <button class="btn btn-primary">Save Changes</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </section>
+
+      <section id="clNotificationPreferences" class="mb-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Notification Preferences</h5>
+            <form>
+              <div class="form-check mb-2">
+                <input class="form-check-input" type="checkbox" id="emailNotifications" checked>
+                <label class="form-check-label" for="emailNotifications">Email notifications for new replies</label>
+              </div>
+              <div class="form-check mb-2">
+                <input class="form-check-input" type="checkbox" id="inAppNotifications">
+                <label class="form-check-label" for="inAppNotifications">In-app notifications for tutor responses</label>
+              </div>
+              <div class="form-check mb-2">
+                <input class="form-check-input" type="checkbox" id="sessionReminders" checked>
+                <label class="form-check-label" for="sessionReminders">Session reminder emails</label>
+              </div>
+              <button class="btn btn-primary btn-sm">Save Notification Settings</button>
+            </form>
+          </div>
+        </div>
+      </section>
+
+      <section id="clAccountSecurity" class="mb-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Account Security</h5>
+            <form class="row g-3">
+              <div class="col-md-6">
+                <label class="form-label">New Password</label>
+                <input type="password" class="form-control" placeholder="Enter new password">
+              </div>
+              <div class="col-md-6">
+                <label class="form-label">Confirm Password</label>
+                <input type="password" class="form-control" placeholder="Confirm new password">
+              </div>
+              <div class="col-12">
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" id="twoFactorAuth">
+                  <label class="form-check-label" for="twoFactorAuth">Enable Two-Factor Authentication</label>
+                </div>
+              </div>
+              <div class="col-12">
+                <button class="btn btn-primary">Update Security Settings</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </section>
+
+      <section id="clTutorApplication" class="mb-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Apply to Become a Tutor</h5>
+            <form class="row g-3">
+              <div class="col-md-6">
+                <label class="form-label">Module</label>
+                <select class="form-select">
+                  <option>SE202</option>
+                  <option>DB101</option>
+                  <option>ITM300</option>
+                </select>
+              </div>
+              <div class="col-md-6">
+                <label class="form-label">Qualifications</label>
+                <input class="form-control" placeholder="e.g., Completed SE202 with 85%">
+              </div>
+              <div class="col-12">
+                <label class="form-label">Why do you want to tutor?</label>
+                <textarea class="form-control" rows="3" placeholder="Share your motivation…"></textarea>
+              </div>
+              <div class="col-12">
+                <button class="btn btn-primary">Submit Application</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </section>
+
+      <section id="clActivitySummary" class="mb-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Activity Summary</h5>
+            <ul class="list-unstyled small">
+              <li><i class="fa-solid fa-user me-2"></i>Updated profile picture • Today 09:30</li>
+              <li><i class="fa-solid fa-check me-2"></i>Submitted tutor application for DB101 • Yesterday</li>
+              <li><i class="fa-solid fa-bell me-2"></i>Enabled email notifications • 2 days ago</li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="mt-5 py-4 border-top">
@@ -73,6 +201,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/app.js"></script>
-
   </body>
 </html>
