--- a/pages/notifications.html
+++ b/pages/notifications.html
@@ -7,13 +7,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
-
+    <link rel="icon" href="/assets/images/Favicon.png" type="image/x-icon">
+    <style>
+      body {
+        background-image: url('https://www.transparenttextures.com/patterns/cubes.png'), url('https://img.freepik.com/premium-vector/hand-drawn-set-elements-abstract-arrows-ribbons-hearts-stars-crowns-monsters-other-elements-hand-drawn-style-concept-design-scribble-illustration-vector-illustration_607987-917.jpg');
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        background-blend-mode: overlay;
+        background-size: auto, cover;
+        background-repeat: repeat, no-repeat;
+        background-color: #f5f7fa;
+      } 
+    </style>
   </head>
   <body>
-
-    <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom sticky-top">
       <div class="container">
-        <a class="navbar-brand fw-bold" href="index.html">CampusLearn<span class="text-primary">™</span></a>
+        <a class="navbar-brand fw-bold" href="../index.html">CampusLearn<span class="text-primary">™</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#clNav" aria-controls="clNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -23,43 +34,147 @@
             <li class="nav-item"><a class="nav-link" href="forum.html">Forum</a></li>
             <li class="nav-item"><a class="nav-link" href="resources.html">Resources</a></li>
             <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
+            <li class="nav-item"><a class="nav-link active" href="notifications.html">Notifications</a></li>
             <li class="nav-item"><a class="nav-link" href="messages.html">Messages</a></li>
           </ul>
           <div class="d-flex gap-2">
-            <a href="login.html" class="btn btn-outline-primary btn-sm">Log in</a>
-            <a href="register.html" class="btn btn-primary btn-sm">Register</a>
+            <a href="login.html" class="btn btn-outline-primary btn-sm">Log out</a>
+            <a href="profile.html" class="btn btn-primary btn-sm">My Profile</a>
           </div>
         </div>
       </div>
     </nav>
 
     <main class="container my-4">
+      <h1 class="h4 mb-4">Notifications • API Showcase</h1>
+      <p class="text-muted">Demonstrates where email / SMS / WhatsApp integrations (e.g., SendGrid / Twilio / WhatsApp Business) would be wired. For the project, implement one or more and surface status below.</p>
 
-<h1 class="h4 mb-4">Notifications • API Showcase</h1>
-<p class="text-muted">Demonstrates where email / SMS / WhatsApp integrations (e.g., SendGrid / Twilio / WhatsApp Business) would be wired. For the project, implement one or more and surface status below.</p>
-<form class="row g-3">
-  <div class="col-md-4">
-    <label class="form-label">Channel</label>
-    <select class="form-select">
-      <option>Email</option>
-      <option>SMS</option>
-      <option>WhatsApp</option>
-    </select>
-  </div>
-  <div class="col-md-8">
-    <label class="form-label">Recipient</label>
-    <input class="form-control" placeholder="student@belgiumcampus.ac.za or +27…">
-  </div>
-  <div class="col-12">
-    <label class="form-label">Message</label>
-    <textarea class="form-control" rows="3" placeholder="Your message…"></textarea>
-  </div>
-  <div class="col-12">
-    <button class="btn btn-primary" type="button" onclick="demoSend()">Send Test Notification</button>
-  </div>
-</form>
-<div id="notifStatus" class="mt-3"></div>
+      <section id="clApiConfig" class="mb-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">API Configuration</h5>
+            <form class="row g-3">
+              <div class="col-md-6">
+                <label class="form-label">API Provider</label>
+                <select class="form-select">
+                  <option>SendGrid</option>
+                  <option>Twilio</option>
+                  <option>WhatsApp Business</option>
+                </select>
+              </div>
+              <div class="col-md-6">
+                <label class="form-label">API Key</label>
+                <input class="form-control" type="password" placeholder="Enter API key">
+              </div>
+              <div class="col-12">
+                <button class="btn btn-primary" type="submit">Save Configuration</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </section>
 
+      <section id="clSendNotification" class="mb-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Send Test Notification</h5>
+            <form class="row g-3" id="notificationForm">
+              <div class="col-md-4">
+                <label class="form-label">Channel</label>
+                <select class="form-select" id="notifChannel">
+                  <option>Email</option>
+                  <option>SMS</option>
+                  <option>WhatsApp</option>
+                </select>
+              </div>
+              <div class="col-md-8">
+                <label class="form-label">Recipient</label>
+                <input class="form-control" id="notifRecipient" placeholder="student@belgiumcampus.ac.za or +27…">
+              </div>
+              <div class="col-md-12">
+                <label class="form-label">Template</label>
+                <select class="form-select" id="notifTemplate" onchange="updateMessageTemplate()">
+                  <option value="">Custom Message</option>
+                  <option value="welcome">Welcome Message</option>
+                  <option value="topic_reply">Topic Reply Notification</option>
+                  <option value="resource_added">Resource Added Notification</option>
+                </select>
+              </div>
+              <div class="col-12">
+                <label class="form-label">Message</label>
+                <textarea class="form-control" id="notifMessage" rows="3" placeholder="Your message…"></textarea>
+              </div>
+              <div class="col-12">
+                <button class="btn btn-primary" type="button" onclick="demoSend()">Send Test Notification</button>
+              </div>
+            </form>
+            <div id="notifStatus" class="mt-3"></div>
+          </div>
+        </div>
+      </section>
+
+      <section id="clApiStatus" class="mb-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">API Status Dashboard</h5>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                SendGrid <span class="badge text-bg-success">Connected</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                Twilio <span class="badge text-bg-warning">Pending</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                WhatsApp Business <span class="badge text-bg-danger">Disconnected</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <section id="clNotifHistory" class="mb-4">
+        <h2 class="h5 mb-3">Notification History</h2>
+        <table class="table table-bordered">
+          <thead>
+            <tr>
+              <th>Channel</th>
+              <th>Recipient</th>
+              <th>Message</th>
+              <th>Status</th>
+              <th>Timestamp</th>
+            </tr>
+          </thead>
+          <tbody id="notifHistoryTable">
+            <tr>
+              <td>Email</td>
+              <td>student@belgiumcampus.ac.za</td>
+              <td>Welcome to CampusLearn!</td>
+              <td><span class="badge text-bg-success">Sent</span></td>
+              <td>Oct 13, 2025 10:00 AM</td>
+            </tr>
+            <tr>
+              <td>SMS</td>
+              <td>+27123456789</td>
+              <td>New reply in SE202</td>
+              <td><span class="badge text-bg-success">Sent</span></td>
+              <td>Oct 12, 2025 3:45 PM</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+
+      <section id="clErrorLog" class="mb-4">
+        <h2 class="h5 mb-3">Error Log</h2>
+        <div class="card">
+          <div class="card-body">
+            <ul class="list-unstyled small">
+              <li><i class="fa-solid fa-exclamation-circle me-2 text-danger"></i>Failed to send WhatsApp notification: Invalid API key • Today 09:30 AM</li>
+              <li><i class="fa-solid fa-exclamation-circle me-2 text-danger"></i>Twilio SMS failed: Invalid recipient number • Yesterday</li>
+            </ul>
+            <button class="btn btn-outline-secondary btn-sm mt-2">Clear Logs</button>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="mt-5 py-4 border-top">
@@ -71,6 +186,44 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/app.js"></script>
-    <script>function demoSend(){document.getElementById('notifStatus').innerHTML='<div class="alert alert-success">(Demo) Notification queued via selected API.</div>';}</script>
+    <script>
+      function updateMessageTemplate() {
+        const template = document.getElementById('notifTemplate').value;
+        const messageInput = document.getElementById('notifMessage');
+        const templates = {
+          welcome: 'Welcome to CampusLearn! Start exploring topics and resources.',
+          topic_reply: 'A new reply has been posted to your topic in [Module].',
+          resource_added: 'A new resource has been added to [Module]. Check it out!'
+        };
+        messageInput.value = templates[template] || '';
+      }
+
+      function demoSend() {
+        const channel = document.getElementById('notifChannel').value;
+        const recipient = document.getElementById('notifRecipient').value;
+        const message = document.getElementById('notifMessage').value;
+        const timestamp = new Date().toLocaleString('en-US', { dateStyle: 'medium', timeStyle: 'short' });
+
+        // Update status
+        document.getElementById('notifStatus').innerHTML = '<div class="alert alert-success">(Demo) Notification queued via selected API.</div>';
+
+        // Add to history table
+        const tableBody = document.getElementById('notifHistoryTable');
+        const newRow = document.createElement('tr');
+        newRow.innerHTML = `
+          <td>${channel}</td>
+          <td>${recipient}</td>
+          <td>${message}</td>
+          <td><span class="badge text-bg-success">Sent</span></td>
+          <td>${timestamp}</td>
+        `;
+        tableBody.insertBefore(newRow, tableBody.firstChild);
+
+        // Clear form
+        document.getElementById('notifRecipient').value = '';
+        document.getElementById('notifMessage').value = '';
+        document.getElementById('notifTemplate').value = '';
+      }
+    </script>
   </body>
 </html>
